Change to parquet reading file

--- a/prototyping/video_download.ipynb
+++ b/prototyping/video_download.ipynb
@@ -731,6 +731,319 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parquet files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "videos_mtdta = pd.read_parquet('../Data_collection/data/videos_metadata.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>id</th>\n",
+       "      <th>length</th>\n",
+       "      <th>views</th>\n",
+       "      <th>description</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>age_restricted</th>\n",
+       "      <th>author</th>\n",
+       "      <th>pub_date</th>\n",
+       "      <th>raiting</th>\n",
+       "      <th>channel</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Drones en la agricultura: sensores voladores p...</td>\n",
+       "      <td>grTRnHWDFeU</td>\n",
+       "      <td>88</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Los drones son sensores remotos muy útiles en ...</td>\n",
+       "      <td>b'[]'</td>\n",
+       "      <td>False</td>\n",
+       "      <td>UPA - Unión de Pequeños Agricultores y Ganaderos</td>\n",
+       "      <td>2022-10-24</td>\n",
+       "      <td>None</td>\n",
+       "      <td>UPA_Federal</td>\n",
+       "      <td>youtube.com/watch?v=grTRnHWDFeU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Conocemos cómo funciona una miniturbina que pr...</td>\n",
+       "      <td>cyhdsw2kkiA</td>\n",
+       "      <td>176</td>\n",
+       "      <td>133</td>\n",
+       "      <td>Gracias al programa de formación en digitaliza...</td>\n",
+       "      <td>b'[]'</td>\n",
+       "      <td>False</td>\n",
+       "      <td>UPA - Unión de Pequeños Agricultores y Ganaderos</td>\n",
+       "      <td>2022-10-24</td>\n",
+       "      <td>None</td>\n",
+       "      <td>UPA_Federal</td>\n",
+       "      <td>youtube.com/watch?v=cyhdsw2kkiA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Analizamos un pivot de riego inteligente que o...</td>\n",
+       "      <td>Gfe2IIHOe3g</td>\n",
+       "      <td>148</td>\n",
+       "      <td>130</td>\n",
+       "      <td>Sensores de humedad, cámaras que analizan el e...</td>\n",
+       "      <td>b'[]'</td>\n",
+       "      <td>False</td>\n",
+       "      <td>UPA - Unión de Pequeños Agricultores y Ganaderos</td>\n",
+       "      <td>2022-10-24</td>\n",
+       "      <td>None</td>\n",
+       "      <td>UPA_Federal</td>\n",
+       "      <td>youtube.com/watch?v=Gfe2IIHOe3g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Conocemos en Córdoba las últimas tecnologías d...</td>\n",
+       "      <td>hOR8S5ZnhTM</td>\n",
+       "      <td>370</td>\n",
+       "      <td>177</td>\n",
+       "      <td>Desde seleccionadores automáticos para aceitun...</td>\n",
+       "      <td>b'[]'</td>\n",
+       "      <td>False</td>\n",
+       "      <td>UPA - Unión de Pequeños Agricultores y Ganaderos</td>\n",
+       "      <td>2022-10-24</td>\n",
+       "      <td>None</td>\n",
+       "      <td>UPA_Federal</td>\n",
+       "      <td>youtube.com/watch?v=hOR8S5ZnhTM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Así funciona CalculaPAC: la herramienta de UPA...</td>\n",
+       "      <td>gAnD56tcIOQ</td>\n",
+       "      <td>2134</td>\n",
+       "      <td>13159</td>\n",
+       "      <td>CalculaPAC 2023 es una aplicación a modo de he...</td>\n",
+       "      <td>b'[]'</td>\n",
+       "      <td>False</td>\n",
+       "      <td>UPA - Unión de Pequeños Agricultores y Ganaderos</td>\n",
+       "      <td>2022-10-07</td>\n",
+       "      <td>None</td>\n",
+       "      <td>UPA_Federal</td>\n",
+       "      <td>youtube.com/watch?v=gAnD56tcIOQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45566</th>\n",
+       "      <td>Tema Vårdförbundet  från Vårdförbundets Kongre...</td>\n",
+       "      <td>aR-IItCgDlE</td>\n",
+       "      <td>166</td>\n",
+       "      <td>120</td>\n",
+       "      <td>Introduktionsfilm till tema Vårdförbundet. Med...</td>\n",
+       "      <td>b'[\"V\\\\u00e5rdf\\\\u00f6rbundet\", \"tema\", \"facke...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Vårdförbundet</td>\n",
+       "      <td>2010-04-27</td>\n",
+       "      <td>None</td>\n",
+       "      <td>vardforbundet</td>\n",
+       "      <td>youtube.com/watch?v=aR-IItCgDlE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45567</th>\n",
+       "      <td>Tema Arbetstid från Vårdförbundets Kongress 2008</td>\n",
+       "      <td>xM4XS1nxn7E</td>\n",
+       "      <td>256</td>\n",
+       "      <td>209</td>\n",
+       "      <td>Introduktionsfilm till tema arbetstid. \\nMedve...</td>\n",
+       "      <td>b'[\"biomedicinsk analytiker\", \"r\\\\u00f6ntgensj...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Vårdförbundet</td>\n",
+       "      <td>2010-04-27</td>\n",
+       "      <td>None</td>\n",
+       "      <td>vardforbundet</td>\n",
+       "      <td>youtube.com/watch?v=xM4XS1nxn7E</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45568</th>\n",
+       "      <td>Tema Lön från Vårdförbundets Kongress 2008</td>\n",
+       "      <td>IrYtugEYc3A</td>\n",
+       "      <td>45</td>\n",
+       "      <td>74</td>\n",
+       "      <td>Introduktionsfilm till tema lön. \\r\\nMedverkan...</td>\n",
+       "      <td>b'[\"biomedicinsk analytiker\", \"r\\\\u00f6ntgensj...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Vårdförbundet</td>\n",
+       "      <td>2010-04-27</td>\n",
+       "      <td>None</td>\n",
+       "      <td>vardforbundet</td>\n",
+       "      <td>youtube.com/watch?v=IrYtugEYc3A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45569</th>\n",
+       "      <td>Tema Etik &amp; Bemötande från Vårdförbundets Kong...</td>\n",
+       "      <td>iSJRdOy1yKc</td>\n",
+       "      <td>267</td>\n",
+       "      <td>3017</td>\n",
+       "      <td>Introduktionsfilm till tema etik &amp; bemötande. ...</td>\n",
+       "      <td>b'[\"biomedicinsk analytiker\", \"r\\\\u00f6ntgensj...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Vårdförbundet</td>\n",
+       "      <td>2010-04-27</td>\n",
+       "      <td>None</td>\n",
+       "      <td>vardforbundet</td>\n",
+       "      <td>youtube.com/watch?v=iSJRdOy1yKc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45570</th>\n",
+       "      <td>Vårdförbundets Vision 2018 för hälsa och helhet</td>\n",
+       "      <td>CJtCrq6Gyvk</td>\n",
+       "      <td>175</td>\n",
+       "      <td>2902</td>\n",
+       "      <td>Bildspel som illustrerar Vårdförbundets vision...</td>\n",
+       "      <td>b'[\"v\\\\u00e5rdf\\\\u00f6rbundet\", \"bildspel\", \"v...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Vårdförbundet</td>\n",
+       "      <td>2010-03-23</td>\n",
+       "      <td>None</td>\n",
+       "      <td>vardforbundet</td>\n",
+       "      <td>youtube.com/watch?v=CJtCrq6Gyvk</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>45571 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   title           id  length  \\\n",
+       "0      Drones en la agricultura: sensores voladores p...  grTRnHWDFeU      88   \n",
+       "1      Conocemos cómo funciona una miniturbina que pr...  cyhdsw2kkiA     176   \n",
+       "2      Analizamos un pivot de riego inteligente que o...  Gfe2IIHOe3g     148   \n",
+       "3      Conocemos en Córdoba las últimas tecnologías d...  hOR8S5ZnhTM     370   \n",
+       "4      Así funciona CalculaPAC: la herramienta de UPA...  gAnD56tcIOQ    2134   \n",
+       "...                                                  ...          ...     ...   \n",
+       "45566  Tema Vårdförbundet  från Vårdförbundets Kongre...  aR-IItCgDlE     166   \n",
+       "45567   Tema Arbetstid från Vårdförbundets Kongress 2008  xM4XS1nxn7E     256   \n",
+       "45568         Tema Lön från Vårdförbundets Kongress 2008  IrYtugEYc3A      45   \n",
+       "45569  Tema Etik & Bemötande från Vårdförbundets Kong...  iSJRdOy1yKc     267   \n",
+       "45570    Vårdförbundets Vision 2018 för hälsa och helhet  CJtCrq6Gyvk     175   \n",
+       "\n",
+       "       views                                        description  \\\n",
+       "0        108  Los drones son sensores remotos muy útiles en ...   \n",
+       "1        133  Gracias al programa de formación en digitaliza...   \n",
+       "2        130  Sensores de humedad, cámaras que analizan el e...   \n",
+       "3        177  Desde seleccionadores automáticos para aceitun...   \n",
+       "4      13159  CalculaPAC 2023 es una aplicación a modo de he...   \n",
+       "...      ...                                                ...   \n",
+       "45566    120  Introduktionsfilm till tema Vårdförbundet. Med...   \n",
+       "45567    209  Introduktionsfilm till tema arbetstid. \\nMedve...   \n",
+       "45568     74  Introduktionsfilm till tema lön. \\r\\nMedverkan...   \n",
+       "45569   3017  Introduktionsfilm till tema etik & bemötande. ...   \n",
+       "45570   2902  Bildspel som illustrerar Vårdförbundets vision...   \n",
+       "\n",
+       "                                                keywords  age_restricted  \\\n",
+       "0                                                  b'[]'           False   \n",
+       "1                                                  b'[]'           False   \n",
+       "2                                                  b'[]'           False   \n",
+       "3                                                  b'[]'           False   \n",
+       "4                                                  b'[]'           False   \n",
+       "...                                                  ...             ...   \n",
+       "45566  b'[\"V\\\\u00e5rdf\\\\u00f6rbundet\", \"tema\", \"facke...           False   \n",
+       "45567  b'[\"biomedicinsk analytiker\", \"r\\\\u00f6ntgensj...           False   \n",
+       "45568  b'[\"biomedicinsk analytiker\", \"r\\\\u00f6ntgensj...           False   \n",
+       "45569  b'[\"biomedicinsk analytiker\", \"r\\\\u00f6ntgensj...           False   \n",
+       "45570  b'[\"v\\\\u00e5rdf\\\\u00f6rbundet\", \"bildspel\", \"v...           False   \n",
+       "\n",
+       "                                                 author   pub_date raiting  \\\n",
+       "0      UPA - Unión de Pequeños Agricultores y Ganaderos 2022-10-24    None   \n",
+       "1      UPA - Unión de Pequeños Agricultores y Ganaderos 2022-10-24    None   \n",
+       "2      UPA - Unión de Pequeños Agricultores y Ganaderos 2022-10-24    None   \n",
+       "3      UPA - Unión de Pequeños Agricultores y Ganaderos 2022-10-24    None   \n",
+       "4      UPA - Unión de Pequeños Agricultores y Ganaderos 2022-10-07    None   \n",
+       "...                                                 ...        ...     ...   \n",
+       "45566                                     Vårdförbundet 2010-04-27    None   \n",
+       "45567                                     Vårdförbundet 2010-04-27    None   \n",
+       "45568                                     Vårdförbundet 2010-04-27    None   \n",
+       "45569                                     Vårdförbundet 2010-04-27    None   \n",
+       "45570                                     Vårdförbundet 2010-03-23    None   \n",
+       "\n",
+       "             channel                              url  \n",
+       "0        UPA_Federal  youtube.com/watch?v=grTRnHWDFeU  \n",
+       "1        UPA_Federal  youtube.com/watch?v=cyhdsw2kkiA  \n",
+       "2        UPA_Federal  youtube.com/watch?v=Gfe2IIHOe3g  \n",
+       "3        UPA_Federal  youtube.com/watch?v=hOR8S5ZnhTM  \n",
+       "4        UPA_Federal  youtube.com/watch?v=gAnD56tcIOQ  \n",
+       "...              ...                              ...  \n",
+       "45566  vardforbundet  youtube.com/watch?v=aR-IItCgDlE  \n",
+       "45567  vardforbundet  youtube.com/watch?v=xM4XS1nxn7E  \n",
+       "45568  vardforbundet  youtube.com/watch?v=IrYtugEYc3A  \n",
+       "45569  vardforbundet  youtube.com/watch?v=iSJRdOy1yKc  \n",
+       "45570  vardforbundet  youtube.com/watch?v=CJtCrq6Gyvk  \n",
+       "\n",
+       "[45571 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "videos_mtdta"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
