--- a/prototyping/test_video_metadata.ipynb
+++ b/prototyping/test_video_metadata.ipynb
@@ -425,9 +425,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow_m1",
+   "display_name": "Python 3.9 (tensorflow)",
    "language": "python",
-   "name": "python3"
+   "name": "tensorflow_m1"
   },
   "language_info": {
    "codemirror_mode": {
@@ -439,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:00:33) \n[Clang 13.0.1 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
