--- a/prototyping/test_video_download.ipynb
+++ b/prototyping/test_video_download.ipynb
@@ -1220,6 +1220,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "keys = ['Channel','Video_url', 'Status']\n",
+    "ll = ['dalia', 'js', 3]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1242,7 +1254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:00:33) \n[Clang 13.0.1 ]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
