--- a/prototyping/logos/logos_analysis.ipynb
+++ b/prototyping/logos/logos_analysis.ipynb
@@ -2234,6 +2234,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_logos.to_excel('twenty_logos.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
