--- a/prototyping/logos/logos_analysis.ipynb
+++ b/prototyping/logos/logos_analysis.ipynb
@@ -1839,29 +1839,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_list = (final_logos['name_original'] + ' party ' + final_logos['country']).to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['List Di Pietro/ Italia dei Valori',\n",
-       " \"Noi con l'Italia\",\n",
-       " 'Miljøpartiet de Grønne',\n",
-       " 'Sosialistisk Venstreparti',\n",
-       " 'Convergència Democràtica de Catalunya',\n",
-       " 'Partido Popular',\n",
-       " 'Vänsterpartiet ',\n",
-       " 'Feministiskt initiativ']"
+       "['List Di Pietro/ Italia dei Valori party Italy',\n",
+       " \"Noi con l'Italia party Italy\",\n",
+       " 'Miljøpartiet de Grønne party Norway',\n",
+       " 'Sosialistisk Venstreparti party Norway',\n",
+       " 'Convergència Democràtica de Catalunya party Spain',\n",
+       " 'Partido Popular party Spain',\n",
+       " 'Vänsterpartiet  party Sweden',\n",
+       " 'Feministiskt initiativ party Sweden']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_logos['name_original'].to_list()"
+    "search_list"
    ]
   },
   {
