--- a/prototyping/logos/logos_analysis.ipynb
+++ b/prototyping/logos/logos_analysis.ipynb
@@ -1839,38 +1839,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_list = (final_logos['name_original'] + ' party ' + final_logos['country']).to_list()"
+    "search_list = ['Partido Socialista Obrero Español', 'Partido Popular', 'Moderata samlingspartiet', 'Sveriges socialdemokratiska arbetareparti', \n",
+    "'Høyre', 'Arbeiderpartiet', 'Partito Democratico', 'Forza Italia']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>name_english</th>\n",
+       "      <th>name_original</th>\n",
+       "      <th>logo1</th>\n",
+       "      <th>logo2</th>\n",
+       "      <th>Wiki</th>\n",
+       "      <th>homepage</th>\n",
+       "      <th>logo3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>People's Party</td>\n",
+       "      <td>Partido Popular</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/File:Logo_del_PP...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/People%27s_Party...</td>\n",
+       "      <td>https://www.pp.es/</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Spanish Socialist Workers Party</td>\n",
+       "      <td>Partido Socialista Obrero Español</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/File:Logotipo_de...</td>\n",
+       "      <td>https://www.crwflags.com/fotw/images/e/es%7Dps...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Spanish_Socialis...</td>\n",
+       "      <td>http://www.psoe.es/</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>Moderate Party</td>\n",
+       "      <td>Moderata samlingspartiet</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/File:M_v1.svg</td>\n",
+       "      <td>https://sv.wikipedia.org/wiki/Moderata_ungdoms...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Moderate_Party</td>\n",
+       "      <td>https://moderaterna.se/</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>Social Democrats</td>\n",
+       "      <td>Sveriges socialdemokratiska arbetareparti</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/File:Swedish_Soc...</td>\n",
+       "      <td>https://commons.wikimedia.org/wiki/File:SSU-lo...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Swedish_Social_D...</td>\n",
+       "      <td>http://socialdemokraterna.se/</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>Conservative Party</td>\n",
+       "      <td>Høyre</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/File:Hoyre.png</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Conservative_Par...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Democratic Party</td>\n",
+       "      <td>Partito Democratico</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/File:Partito_Dem...</td>\n",
+       "      <td>https://blogger.googleusercontent.com/img/b/R2...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Democratic_Party...</td>\n",
+       "      <td>https://www.partitodemocratico.it/</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Forward Italy</td>\n",
+       "      <td>Forza Italia</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/File:Logo_Forza_...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/File:Logo_ForzaI...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Forza_Italia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/File:Forza_Itali...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['List Di Pietro/ Italia dei Valori party Italy',\n",
-       " \"Noi con l'Italia party Italy\",\n",
-       " 'Miljøpartiet de Grønne party Norway',\n",
-       " 'Sosialistisk Venstreparti party Norway',\n",
-       " 'Convergència Democràtica de Catalunya party Spain',\n",
-       " 'Partido Popular party Spain',\n",
-       " 'Vänsterpartiet  party Sweden',\n",
-       " 'Feministiskt initiativ party Sweden']"
+       "   country                     name_english  \\\n",
+       "2    Spain                   People's Party   \n",
+       "3    Spain  Spanish Socialist Workers Party   \n",
+       "17  Sweden                   Moderate Party   \n",
+       "18  Sweden                 Social Democrats   \n",
+       "24  Norway               Conservative Party   \n",
+       "31   Italy      Democratic Party              \n",
+       "46   Italy                    Forward Italy   \n",
+       "\n",
+       "                                name_original  \\\n",
+       "2                             Partido Popular   \n",
+       "3           Partido Socialista Obrero Español   \n",
+       "17                   Moderata samlingspartiet   \n",
+       "18  Sveriges socialdemokratiska arbetareparti   \n",
+       "24                                      Høyre   \n",
+       "31                        Partito Democratico   \n",
+       "46                               Forza Italia   \n",
+       "\n",
+       "                                                logo1  \\\n",
+       "2   https://en.wikipedia.org/wiki/File:Logo_del_PP...   \n",
+       "3   https://en.wikipedia.org/wiki/File:Logotipo_de...   \n",
+       "17        https://en.wikipedia.org/wiki/File:M_v1.svg   \n",
+       "18  https://en.wikipedia.org/wiki/File:Swedish_Soc...   \n",
+       "24       https://en.wikipedia.org/wiki/File:Hoyre.png   \n",
+       "31  https://en.wikipedia.org/wiki/File:Partito_Dem...   \n",
+       "46  https://en.wikipedia.org/wiki/File:Logo_Forza_...   \n",
+       "\n",
+       "                                                logo2  \\\n",
+       "2                                                 NaN   \n",
+       "3   https://www.crwflags.com/fotw/images/e/es%7Dps...   \n",
+       "17  https://sv.wikipedia.org/wiki/Moderata_ungdoms...   \n",
+       "18  https://commons.wikimedia.org/wiki/File:SSU-lo...   \n",
+       "24                                                NaN   \n",
+       "31  https://blogger.googleusercontent.com/img/b/R2...   \n",
+       "46  https://en.wikipedia.org/wiki/File:Logo_ForzaI...   \n",
+       "\n",
+       "                                                 Wiki  \\\n",
+       "2   https://en.wikipedia.org/wiki/People%27s_Party...   \n",
+       "3   https://en.wikipedia.org/wiki/Spanish_Socialis...   \n",
+       "17       https://en.wikipedia.org/wiki/Moderate_Party   \n",
+       "18  https://en.wikipedia.org/wiki/Swedish_Social_D...   \n",
+       "24  https://en.wikipedia.org/wiki/Conservative_Par...   \n",
+       "31  https://en.wikipedia.org/wiki/Democratic_Party...   \n",
+       "46         https://en.wikipedia.org/wiki/Forza_Italia   \n",
+       "\n",
+       "                              homepage  \\\n",
+       "2                   https://www.pp.es/   \n",
+       "3                  http://www.psoe.es/   \n",
+       "17             https://moderaterna.se/   \n",
+       "18       http://socialdemokraterna.se/   \n",
+       "24                                 NaN   \n",
+       "31  https://www.partitodemocratico.it/   \n",
+       "46                                 NaN   \n",
+       "\n",
+       "                                                logo3  \n",
+       "2                                                 NaN  \n",
+       "3                                                 NaN  \n",
+       "17                                                NaN  \n",
+       "18                                                NaN  \n",
+       "24                                                NaN  \n",
+       "31                                                NaN  \n",
+       "46  https://en.wikipedia.org/wiki/File:Forza_Itali...  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "search_list"
+    "final_search_df = parties_logos[parties_logos['name_original'].isin(search_list)]\n",
+    "final_search_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_search_list = (final_search_df.name_original + ' party ' + final_search_df.country).to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Partido Popular party Spain',\n",
+       " 'Partido Socialista Obrero Español party Spain',\n",
+       " 'Moderata samlingspartiet party Sweden',\n",
+       " 'Sveriges socialdemokratiska arbetareparti party Sweden',\n",
+       " 'Høyre party Norway',\n",
+       " 'Partito Democratico party Italy',\n",
+       " 'Forza Italia party Italy']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_search_list"
    ]
   },
   {
