Reorganising last folder

--- a/prototyping/logos/trainig_data_preprocessing.ipynb
+++ b/prototyping/logos/trainig_data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,11 +55,11 @@
    "source": [
     "# Change format from many to only jpeg\n",
     "\n",
-    "root_folder = '/Users/pauor506/Documents/CDHU/June2022:Dec2022/Pilots/Youtube_Katrin/logos_imgs/'\n",
+    "root_folder = '/Users/pauor506/Documents/CDHU/June2022:Dec2022/Pilots/Youtube_Katrin/Data_party_logos/'\n",
     "\n",
     "\n",
     "for dir in os.listdir(root_folder):\n",
-    "    if not dir.startswith('.') and not dir.endswith('unida_partido'):\n",
+    "    if not dir.startswith('.'):\n",
     "        party_folder = root_folder + dir + '/'\n",
     "        print(party_folder)\n",
     "        for image in os.listdir(party_folder+'images'):\n",
@@ -71,21 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lenghts are: 77 for labels and 285 for images\n",
-      "Match lenght: 77\n"
+      "lenghts are: 117 for labels and 196 for images\n",
+      "Match lenght: 116\n"
      ]
     }
    ],
    "source": [
-    "root_folder = '/Users/pauor506/Documents/CDHU/June2022:Dec2022/Pilots/Youtube_Katrin/logos_imgs'\n",
-    "party = 'Sverige_Sverigedemokraterna'\n",
+    "root_folder = '/Users/pauor506/Documents/CDHU/June2022:Dec2022/Pilots/Youtube_Katrin/Data_party_logos'\n",
+    "party = 'España_Izquierda_unida_partido'\n",
     "party_folder = root_folder + '/' + party\n",
     "\n",
     "labels_list = [label.split('.')[0] for label in os.listdir(party_folder+'/'+'labels')]\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +137,20 @@
     "    os.replace(folder+'/'+immm, folder+'/'+immm.split('jpeg')[0]+'.jpeg')\n",
     "    #print(immm.split('jpeg')[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
