train/test/val spliting

--- a/prototyping/logos/trainig_data_preprocessing.ipynb
+++ b/prototyping/logos/trainig_data_preprocessing.ipynb
@@ -114,20 +114,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
    "outputs": [],
@@ -153,18 +139,88 @@
    "source": []
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data set split train and test "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This code creates two new folders train and val in the main_folder, and copies the training\n",
+    "#and validation files into their respective folders. The code assumes that the label files have \n",
+    "#the same name as the image files, but with a .txt extension instead of an image extension. \n",
+    "\n",
+    "import os\n",
+    "import random\n",
+    "import shutil\n",
+    "\n",
+    "# Set the main folder path\n",
+    "main_folder = \"/Users/pauor506/Desktop/YOLODataset\"\n",
+    "\n",
+    "# Set the validation set ratio (0.2 means 20% validation, 80% training)\n",
+    "validation_ratio = 0.25\n",
+    "\n",
+    "# Get the list of image and label files\n",
+    "image_folder = os.path.join(main_folder, \"images\")\n",
+    "label_folder = os.path.join(main_folder, \"labels\")\n",
+    "image_files = [filename for filename in os.listdir(image_folder) if not filename.startswith('.')]\n",
+    "label_files = [filename for filename in os.listdir(label_folder) if not filename.startswith('.')]\n",
+    "\n",
+    "# Calculate the number of files in the validation set\n",
+    "num_validation = int(len(image_files) * validation_ratio)\n",
+    "\n",
+    "# Shuffle the files randomly\n",
+    "random.shuffle(image_files)\n",
+    "\n",
+    "# Split the files into training and validation sets\n",
+    "train_images = image_files[num_validation:]\n",
+    "train_labels = [os.path.splitext(filename)[0] + \".txt\" for filename in train_images]\n",
+    "val_images = image_files[:num_validation]\n",
+    "val_labels = [os.path.splitext(filename)[0] + \".txt\" for filename in val_images]\n",
+    "\n",
+    "#Create the training and validation folders for images and labels\n",
+    "train_folder = os.path.join(main_folder, \"train\")\n",
+    "train_image_folder = os.path.join(train_folder, \"images\")\n",
+    "train_label_folder = os.path.join(train_folder, \"labels\")\n",
+    "val_folder = os.path.join(main_folder, \"val\")\n",
+    "val_image_folder = os.path.join(val_folder, \"images\")\n",
+    "val_label_folder = os.path.join(val_folder, \"labels\")\n",
+    "os.makedirs(train_image_folder, exist_ok=True)\n",
+    "os.makedirs(train_label_folder, exist_ok=True)\n",
+    "os.makedirs(val_image_folder, exist_ok=True) \n",
+    "os.makedirs(val_label_folder, exist_ok=True)\n",
+    "\n",
+    "# Copy the training and validation files to their respective folders\n",
+    "for image_file, label_file in zip(train_images, train_labels):\n",
+    "    shutil.copy(os.path.join(image_folder, image_file), os.path.join(train_image_folder, image_file))\n",
+    "    shutil.copy(os.path.join(label_folder, label_file), os.path.join(train_label_folder, label_file))\n",
+    "for image_file, label_file in zip(val_images, val_labels):\n",
+    "    shutil.copy(os.path.join(image_folder, image_file), os.path.join(val_image_folder, image_file))\n",
+    "    shutil.copy(os.path.join(label_folder, label_file), os.path.join(val_label_folder, label_file))\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "            "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow_m1",
+   "display_name": "Python 3.9 (tensorflow)",
    "language": "python",
-   "name": "python3"
+   "name": "tensorflow_m1"
   },
   "language_info": {
    "codemirror_mode": {
