Finished hyperparameter tunning

--- a/prototyping/logo_detection_training/Swedish_model_first_train.ipynb
+++ b/prototyping/logo_detection_training/Swedish_model_first_train.ipynb
@@ -3822,13 +3822,7 @@
       "                 Class     Images  Instances          P          R      mAP50   \n",
       "                   all         46        121      0.167      0.171      0.127     0.0318\n",
       "\n",
-      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
       "     21/149       3.9G    0.08596    0.01622   0.007084        206        640: 1\n",
       "                 Class     Images  Instances          P          R      mAP50   \n",
       "                   all         46        121     0.0846      0.341     0.0535     0.0137\n",
@@ -5800,13 +5794,7 @@
       "                 Class     Images  Instances          P          R      mAP50   \n",
       "                   all         46        121    0.00072     0.0835   0.000491   0.000199\n",
       "\n",
-      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
       "     21/149       3.9G     0.1095    0.02055    0.02822        206        640: 1\n",
       "                 Class     Images  Instances          P          R      mAP50   \n",
       "                   all         46        121   0.000658     0.0748    0.00048   0.000184\n",
@@ -8457,11 +8445,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69786d68",
+   "cell_type": "markdown",
+   "id": "7bfee2f4",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
