--- a/prototyping/logos/trainig_data_preprocessing.ipynb
+++ b/prototyping/logos/trainig_data_preprocessing.ipynb
@@ -90,7 +90,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,7 +97,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -525,7 +523,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow_m1",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -539,9 +537,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.10"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
