--- a/prototyping/logo_detection_results/results_processing.ipynb
+++ b/prototyping/logo_detection_results/results_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "083e278a",
+   "id": "a0e63a0c",
    "metadata": {},
    "source": [
     "#### Notes\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97d3fbb8",
+   "id": "f155dbdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,10 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "03d07884",
+   "execution_count": 1,
+   "id": "dcacad6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3576460810.py, line 26)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 26\u001b[0;36m\u001b[0m\n\u001b[0;31m    'class_label':,\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "main_folder = 'path/to/main'\n",
     "\n",
@@ -63,30 +72,37 @@
     "            video_path = os.path.join(sub_folder_path,video_d)\n",
     "            labels_dir_path =  os.path.join(video_path,'/labels/')\n",
     "            \n",
-    "            if os.listdir():#Labels dir is not empty:\n",
+    "            if os.listdir(labels_dir_path): # Labels dir is not empty:\n",
     "                \n",
-    "                # Access labels information\n",
-    "            \n",
-    "                # Save detection information in parque file \n",
-    "                info = {'Channel':[channel_d],\n",
-    "                        'Video_id':[video_d], \n",
-    "                        'class_label':,\n",
-    "                        'x_center':,\n",
-    "                        'y_center':,\n",
-    "                        'width':,\n",
-    "                        'height':,\n",
-    "                       } \n",
-    "                # If the file does not exists, create it\n",
-    "                if not os.path.isfile(file_path):\n",
-    "                    write(file_path, pd.DataFrame(info))\n",
-    "                else: # Otherwise, write on it\n",
-    "                    write(file_path, pd.DataFrame(info), append=True)\n",
+    "                # Access labels information. This are txt files\n",
+    "                labels_files = [filename for filename in os.listdir(labels_dir_path) if not filename.startswith('.')]\n",
+    "                for label_f in labels_files:\n",
+    "                    \n",
+    "                    with open(f'{label_f}.txt', 'r') as f:\n",
+    "                        lines = f.readlines()\n",
+    "                        \n",
+    "                        df = pd.DataFrame([l.split() for l in lines],columns=['Channel','Video_id','class_label',\n",
+    "                                'x_center','y_center','width','height'])\n",
+    "       \n",
+    "                        # If the file does not exists, create it\n",
+    "                        if not os.path.isfile(file_path): ### WORK ON THIS\n",
+    "                            write(file_path, pd.DataFrame(info))\n",
+    "                        else: # Otherwise, write on it\n",
+    "                            write(file_path, pd.DataFrame(info), append=True)\n",
     "            else: \n",
     "                pass\n",
     "\n",
     "def transf_parque(parque_file):\n",
     "    ####"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f3ddff7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
